--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,33 @@
 <resources>
     <string name="app_name">spbMarks</string>
+
+    <string name="kazanDisc">Один из крупнейших храмов Санкт-Петербурга.
+        Построен для хранения чтимого списка чудотворной иконы Божией Матери Казанской.
+        После Отечественной войны 1812 года приобрёл значение памятника русской воинской славы.
+        В 1813 году здесь был похоронен полководец Михаил Кутузов и помещены ключи от взятых городов и другие военные трофеи.</string>
+
+    <string name="isacDisc">Крупнейший православный храм Санкт-Петербурга.
+        Современное здание собора является четвёртым петербургским храмом в честь Исаакия Далматского,
+        возведённым на месте собора, спроектированного Антонио Ринальди.
+        При возведении здания использовались новые для того времени строительные технологии,
+        что повлияло на дальнейшее развитие архитектуры XIX и XX века.</string>
+
+    <string name="discHermit">Является одним из крупнейших художественных музеев в мире.
+        Главный музейный комплекс включает в себя шесть связанных между собой зданий.
+        Общая площадь помещений Государственного Эрмитажа составляет 233 345 м².
+        Коллекция музея насчитывает около трёх миллионов произведений искусства и памятников мировой культуры,
+        собранных начиная с каменного века и до нашего столетия.</string>
+
+    <string name="vsadnicDisc"> Памятник Петру I на Сенатской площади в Санкт-Петербурге.
+        Памятник изготовлен из бронзы. Название «медный» закрепилось за ним благодаря поэме А. С. Пушкина «Медный всадник».</string>
+
+    <string name="spasDisc"> Православный мемориальный однопрестольный храм во имя Воскресения Христова; сооружён в память того,
+        что на этом месте 1 марта 1881 года в результате покушения был смертельно ранен император Александр II
+        (выражение на крови указывает на кровь царя). Храм был сооружён как памятник царю на средства, собранные по всей России.</string>
+
+    <string name="zamokDisc">Бывший императорский дворец в центре Санкт-Петербурга.
+        На рубеже XVIII—XIX веков построенный как замок на воде по заказу императора Павла I и ставший местом его смерти.
+        Это здание — крупнейший архитектурный памятник, завершающий собою историю петербургского зодчества XVIII века.
+        Павел I был убит офицерами в Михайловском замке в собственной опочивальне в ночь на 12 марта 1801 года.</string>
+
 </resources>
