--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,10 +18,10 @@
         Коллекция музея насчитывает около трёх миллионов произведений искусства и памятников мировой культуры,
         собранных начиная с каменного века и до нашего столетия.</string>
 
-    <string name="vsadnicDisc"> Памятник Петру I на Сенатской площади в Санкт-Петербурге.
+    <string name="vsadnicDisc">Памятник Петру I на Сенатской площади в Санкт-Петербурге.
         Памятник изготовлен из бронзы. Название «медный» закрепилось за ним благодаря поэме А. С. Пушкина «Медный всадник».</string>
 
-    <string name="spasDisc"> Православный мемориальный однопрестольный храм во имя Воскресения Христова; сооружён в память того,
+    <string name="spasDisc">Православный мемориальный однопрестольный храм во имя Воскресения Христова; сооружён в память того,
         что на этом месте 1 марта 1881 года в результате покушения был смертельно ранен император Александр II
         (выражение на крови указывает на кровь царя). Храм был сооружён как памятник царю на средства, собранные по всей России.</string>
 
@@ -29,5 +29,27 @@
         На рубеже XVIII—XIX веков построенный как замок на воде по заказу императора Павла I и ставший местом его смерти.
         Это здание — крупнейший архитектурный памятник, завершающий собою историю петербургского зодчества XVIII века.
         Павел I был убит офицерами в Михайловском замке в собственной опочивальне в ночь на 12 марта 1801 года.</string>
+
+    <string name="aboutApp">Приложение spbMarks подробно расскажет вам о лучших достопримечательностях города Санкт-Петербург.
+        Здесь вы сможете узнать краткую историческую информацию, инфорамцию о местоположении достопримечательности.</string>
+
+    <string name="rusDisc">Музей является крупнейшим собранием российского искусства в мире.
+        На 1 января 2015 года собрание Русского музея составило 410 945 единиц хранения. В это число входят произведения живописи,
+        графики, скульптуры, нумизматики, декоративно-прикладного и народного искусства, а также архивные материалы.</string>
+
+    <string name="petropDisc">Старейший памятник архитектуры Санкт-Петербурга, крепость I класса.
+        Расположена на Заячьем острове, в Санкт-Петербурге, историческое ядро города.
+        Дата закладки крепости 27 мая 1703 года, является датой основания Санкт-Петербурга. Никогда не использовалась ни в одном сражении.
+        С первой четверти XVIII века до начала 1920-х годов служила тюрьмой. С 1924 года является государственным музеем.</string>
+
+    <string name="kuntsDisc">Первый музей в России, учреждённый императором Петром I в Санкт-Петербурге.
+        Обладает уникальной коллекцией предметов старины, раскрывающих историю и быт многих народов.
+        Но многим этот музей известен своей «особенной» коллекцией анатомических редкостей и аномалий.
+        Здание Кунсткамеры с начала XVIII в. является символом Российской академии наук.
+        Башню Кунсткамеры венчает Армиллярная сфера.</string>
+
+    <string name="marinksDisc">Театр оперы и балета в Санкт-Петербурге, один из ведущих музыкальных театров России и мира.
+    Театральный комплекс включает в себя собственно основное здание на Театральной площади, концертный зал (с 2006 года и новый южный корпус с 2021 года),
+    вторую сцену на Крюковом канале (с 2013 года) и филиалы во Владивостоке (с 2016 года) и Владикавказе (с 2017).</string>
 
 </resources>
