--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,4 +91,12 @@
         Театральный комплекс включает в себя собственно основное здание на Театральной площади, концертный зал (с 2006 года и новый южный корпус с 2021 года),
         вторую сцену на Крюковом канале (с 2013 года) и филиалы во Владивостоке (с 2016 года) и Владикавказе (с 2017).</string>
 
+
+
+    <string name="sights">Достопримечательности</string>
+
+    <string name="aboutAppName">О приложении</string>
+
+    <string name="exit">Выйти</string>
+
 </resources>
