--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,93 +5,6 @@
     <string name="aboutApp">Приложение spbMarks подробно расскажет вам о лучших достопримечательностях города Санкт-Петербург.
         Здесь вы сможете узнать краткую историческую информацию, инфорамцию о местоположении достопримечательности.</string>
 
-    <string name="kazanDisc">Один из крупнейших храмов Санкт-Петербурга.
-        Построен для хранения чтимого списка чудотворной иконы Божией Матери Казанской.
-        После Отечественной войны 1812 года приобрёл значение памятника русской воинской славы.
-        В 1813 году здесь был похоронен полководец Михаил Кутузов и помещены ключи от взятых городов и другие военные трофеи.
-        В 1932 году превращён в Музей истории религии и атеизма.
-        С 1991 года — действующий храм, несколько лет сосуществовавший с экспозицией музея.
-        С 2000 года — кафедральный собор Санкт-Петербургской епархии Русской православной церкви.
-        С 9 марта 2019 года настоятелем является митрополит Санкт-Петербургский и Ладожский Варсонофий.</string>
-
-    <string name="isacDisc">Крупнейший православный храм Санкт-Петербурга.
-        Современное здание собора является четвёртым петербургским храмом в честь Исаакия Далматского,
-        возведённым на месте собора, спроектированного Антонио Ринальди.
-        При возведении здания использовались новые для того времени строительные технологии,
-        что повлияло на дальнейшее развитие архитектуры XIX и XX века.
-        Сооружение здания и работы по его оформлению продолжались с 1818 по 1858 год.
-        Исаакиевский собор считается самой поздней постройкой в стиле классицизма.</string>
-
-    <string name="discHermit">Является одним из крупнейших художественных музеев в мире.
-        Главный музейный комплекс включает в себя шесть связанных между собой зданий.
-        Общая площадь помещений Государственного Эрмитажа составляет 233 345 м².
-        Свою историю музей начинал с коллекции произведений искусства, приобретённых в частном порядке российской императрицей Екатериной II в 1764 году.
-        Первоначально это собрание размещалось в специальном дворцовом флигеле — Эрмитаже, откуда и закрепилось общее название будущего музея.
-        В 1852 году из сильно разросшейся коллекции был сформирован и открыт для посещения публичный музей, расположившийся в специально для этого построенном здании Нового Эрмитажа
-        Коллекция музея насчитывает около трёх миллионов произведений искусства и памятников мировой культуры,
-        собранных начиная с каменного века и до нашего столетия.</string>
-
-    <string name="vsadnicDisc">Памятник Петру I на Сенатской площади в Санкт-Петербурге.
-        Памятник изготовлен из бронзы. Название «медный» закрепилось за ним благодаря поэме А. С. Пушкина «Медный всадник».
-        Модель конной статуи Петра выполнена скульптором Этьеном Фальконе в 1768—1770 г.
-        Голову статуи лепила ученица этого скульптора, Мари Анн Колло.
-        Змею по замыслу Фальконе вылепил Фёдор Гордеев.
-        Отливка статуи осуществлялась под руководством литейных дел мастера Екимова Василия Петровича и была закончена в 1778 году.
-        Архитектурно-планировочные решения и общее руководство осуществлял Юрий Фельтен.</string>
-
-    <string name="spasDisc">Православный мемориальный однопрестольный храм во имя Воскресения Христова; сооружён в память того,
-        что на этом месте 1 марта 1881 года в результате покушения был смертельно ранен император Александр II
-        (выражение на крови указывает на кровь царя). Храм был сооружён как памятник царю на средства, собранные по всей России.
-        Храм был возведён по указу императора Александра III в 1883—1907 годах по совместному проекту архитектора Альфреда Парланда и архимандрита Игнатия,
-        который впоследствии от строительства отошёл. Проект выполнен в русском стиле, несколько напоминает московский собор Покрова на Рву.
-        Строительство длилось 24 года. 6 августа 1907 года собор был освящён.</string>
-
-    <string name="zamokDisc">Бывший императорский дворец в центре Санкт-Петербурга.
-        На рубеже XVIII—XIX веков построенный как замок на воде по заказу императора Павла I и ставший местом его смерти.
-        Общий замысел создания замка и первые эскизы его планировки принадлежали самому Павлу.
-        Работа над проектом будущей резиденции началась ещё в 1784 году, в бытность его великим князем.
-        В процессе проектирования, которое длилось почти 12 лет, он обращался к различным архитектурным образцам,
-        увиденным им во время заграничного путешествия 1781—1782 годов. Одним из возможных мест возведения нового дворца называлась Гатчина.
-        Это здание — крупнейший архитектурный памятник, завершающий собою историю петербургского зодчества XVIII века.
-        Павел I был убит офицерами в Михайловском замке в собственной опочивальне в ночь на 12 марта 1801 года.</string>
-
-    <string name="rusDisc">Музей является крупнейшим собранием российского искусства в мире.
-        Коллекция берёт своё начало с произведений, поступивших к 1898 году из Академии художеств (122 картины),
-        Эрмитажа (80 картин), Зимнего дворца, пригородных дворцов — Гатчинского и Александровского (95 картин),
-        а также приобретённых в частных коллекциях. В частности, крупная коллекция портретной живописи (несколько десятков картин)
-        поступила от наследников князя А. Б. Лобанова-Ростовского, коллекция рисунков и акварелей — от княгини М. К. Тенишевой и других.
-        К открытию Русского музея в собрании имелось 445 картин, 111 скульптур, 981 графический лист (рисунки, гравюры и акварели),
-        а также около 5000 памятников старины (иконы и изделия древнерусского декоративно-прикладного искусства).
-        На 1 января 2015 года собрание Русского музея составило 410 945 единиц хранения. В это число входят произведения живописи,
-        графики, скульптуры, нумизматики, декоративно-прикладного и народного искусства, а также архивные материалы.</string>
-
-    <string name="petropDisc">Старейший памятник архитектуры Санкт-Петербурга, крепость I класса.
-        Расположена на Заячьем острове, в Санкт-Петербурге, историческое ядро города.
-        Дата закладки крепости 27 мая 1703 года, является датой основания Санкт-Петербурга. Никогда не использовалась ни в одном сражении.
-        С первой четверти XVIII века до начала 1920-х годов служила тюрьмой. С 1924 года является государственным музеем.
-        С 1873 года с Нарышкина бастиона крепости ежедневно в 12 часов производится артиллерийский сигнальный выстрел (не осуществлялся с 1934 по 1953 год).
-        Является историческим символом города.
-        Согласно Уставу Санкт-Петербурга, историческими символами города являются ангел на шпиле Петропавловского собора,
-        кораблик на шпиле Адмиралтейства и памятник «Медный всадник».</string>
-
-    <string name="kuntsDisc">Первый музей в России, учреждённый императором Петром I в Санкт-Петербурге.
-        Пётр I во время «великого посольства» в 1697—1698 годах осматривал крупные преуспевающие города Голландии и Англии.
-        Увидел и заморские кабинеты «кунштов», то есть редкостей, чудес. На страницах дневника, который приказал вести Пётр,
-        часто мелькает восклицание «зело дивно!». Есть запись и о новейшей науке анатомии: «Видел у доктора анатомию:
-        вся внутренность разнята разно, — сердце человеческое, лёгкое, почки… Жилы, которые в мозгу живут, — как нитки…».
-        Петра очень заинтересовали подобные новшества и царь, не скупясь, закупал целые коллекции и отдельные вещи: книги, приборы,
-        инструменты, оружие, природные редкости. Эти предметы и легли в основу «государева Кабинета», а потом и Петровской Кунсткамеры,
-        первого российского естественнонаучного музея. Здание Кунсткамеры с начала XVIII в. является символом Российской академии наук.</string>
-
-    <string name="marinksDisc">Театр оперы и балета в Санкт-Петербурге, один из ведущих музыкальных театров России и мира.
-        Труппа, основанная ещё в XVIII веке, до революции функционировала под руководством дирекции Императорских театров.
-        В 1784—1886 годах для балетных и оперных спектаклей использовалось преимущественно здание Большого театра
-        (в 1896 году перестроено архитектором В. В. Николя для размещения Санкт-Петербургской консерватории),
-        в 1859—1860 году там же, на Театральной площади, архитектором А. К. Кавосом было выстроено нынешнее здание театра,
-        названное в честь императрицы Марии Александровны.
-        Театральный комплекс включает в себя собственно основное здание на Театральной площади, концертный зал (с 2006 года и новый южный корпус с 2021 года),
-        вторую сцену на Крюковом канале (с 2013 года) и филиалы во Владивостоке (с 2016 года) и Владикавказе (с 2017).</string>
-
     <string name="sights">Достопримечательности</string>
 
     <string name="aboutAppName">О приложении</string>
@@ -110,4 +23,9 @@
 
     <string name="favPage">Избранное</string>
 
+    <string name="language">ru</string>
+
+    <string name="yearOfBuild">Год постройки:  </string>
+
+    <string name="architect">Архитектор:  </string>
 </resources>
