weather api added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -54,4 +54,6 @@
     <string name="email">Почта</string>
 
     <string name="reEnterPassword">Повторите пароль</string>
+
+    <string name="feelsLike">Ощущается как </string>
 </resources>
