--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -66,4 +66,10 @@
     <string name="address"><b>Адрес: </b></string>
 
     <string name="guest">Войти как гость</string>
+
+    <string name="park">Парки</string>
+
+    <string name="architecture">Архитектура</string>
+
+    <string name="entertainment">Развлечения</string>
 </resources>
